--- a/css/styles.css
+++ b/css/styles.css
@@ -192,12 +192,11 @@ Custom Styles
 p { font-weight: 300; }
 .navigation { background-color: #1F1F1F;     line-height: 0px; }
 .container-fluid {
-    background: linear-gradient(0deg, black,  #7accc8 );
-}
+    background: rgba(169, 168, 168, 0.19); }
 .nav_slide_button {
     padding-top: 20px;
     color-rendering: optimizeSpeed;
-    -webkit-filter: invert(100%);
+    /* -webkit-filter: invert(100%) */;
 }
 .nav-last { margin-bottom: 50px; }
 nav ul { list-style: none; padding: 0; }
@@ -205,9 +204,13 @@ nav ul li a { color: rgba(255, 255, 255, 0.6); padding: 20px; display: block; bo
 nav ul li a:hover, nav ul li a:focus { color: rgba(255, 255, 255, 1); text-decoration: none; }
 .indicator { position: absolute; right: 0 !important; }
 .pull { display: none; }
-.hero { background: linear-gradient(180deg, black, #C1EAE8 ) ; }/* : url('https://unsplash.it/1800/900?image=223') no-repeat center center; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; padding: 65px 0; height: auto; */ }
+/* .hero { background: url('../img/hero.jpg') no-repeat center center; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; padding: 65px 0; height: auto; }
+ */
+
+
+.hero { background: rgba(169, 168, 168, 0.19); }/* linear-gradient(180deg, black, #C1EAE8 ) ; } */
 .hero h1 { color: black ;}
-.hero p { color: black ; font-style: italic; font-size: 12px; }
+.hero p { color: black ; font-style: italic; font-size: 12px; margin-bottom: 20px; }
 .hero a { color: black; }
 .hero-play-btn { height: 99px; width: 99px; background: url('../img/play-btn.png') no-repeat center center; display: block; text-indent: -99999px; margin: 80px auto 260px; transition: all 1s ease; -moz-transition: all 1s ease; -webkit-transition: all 1s ease; -o-transition: all 1s ease; }
 .hero-play-btn:hover, .hero-play-btn:focus { transform: translate(0, -15px); -webkit-transform: translate(0, -15px); -o-transform: translate(0, -15px); -moz-transform: translate(0, -15px); }
@@ -215,7 +218,9 @@ nav ul li a:hover, nav ul li a:focus { color: rgba(255, 255, 255, 1); text-decor
 .get-started-btn:hover, .get-started-btn:focus { text-decoration: none; background-color: #e8b968; }
 .download-now { background: #e8b968 url('../img/ipadBG.png') no-repeat right 65px; background-size: 50%; }
 .download-now p { color: #fff; font-size: 16px; margin: 40px 30px 40px 0; line-height: 30px; }
-.download-btn { border: solid 3px #fff; border-radius: 3px; -webkit-border-radius: 3px; -moz-border-radius: 3px; font-size: 17px; letter-spacing: 2px; transition: all 0.5s ease; padding: 15px 70px; display: inline-block; color: #fff; margin-bottom: 185px; }
+.download-btn { border: solid 3px #fff; border-radius: 3px; -webkit-border-radius: 3px; -moz-border-radius: 3px; font-size: 17px; letter-spacing: 2px; transition: all 0.5s ease; padding: 15px 70px; display: inline-block; color: #fff; margin-top: 20px; }
+.mail-btn { border: solid 3px #fff; border-radius: 3px; -webkit-border-radius: 3px; -moz-border-radius: 3px; font-size: 17px; letter-spacing: 2px; transition: all 0.5s ease; padding: 15px 70px; display: inline-block; color: #fff; margin-bottom: 120px; margin-top: 20px; }
+
 .download-btn:hover, .download-btn:focus { text-decoration: none; border-color: #a58347; color: #a58347; }
 .testimonials { background: #5b6869 url('../img/tBG01.jpg') no-repeat left center; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; padding: 130px 0; }
 .features { background: #C1EAE8  url('../img/arrowBG.png') no-repeat center -1px; padding: 70px 0; position: relative ;}
@@ -264,6 +269,9 @@ footer p { color: #fff; line-height: 30px; }
 .footer-nav li a { display: block; color: #fff; padding: 5px; transition: all 0.5s ease; -moz-transition: all 0.5s ease; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; }
 .footer-nav li a:hover, .footer-nav li a:focus { text-decoration: none; color: #5db3af; }
 .badge-btn { width: 60px; height: 62px; background: url('../img/footer-logo.png') no-repeat center center; text-indent: -99999px; display: block; margin: 65px auto 65px; -webkit-transition-duration: 3s; -moz-transition-duration: 3s; -o-transition-duration: 3s; transition-duration: 3s; -webkit-transition-property: -webkit-transform; -moz-transition-property: -moz-transform; -o-transition-property: -o-transform; transition-property: transform; }
+.badge-logo { opacity:0.6; height: 62px; background: url('../img/logo.png') no-repeat center center; text-indent: -99999px; display: block; margin: 65px auto 65px; -webkit-transition-duration: 3s; -moz-transition-duration: 3s; -o-transition-duration: 3s; transition-duration: 3s; -webkit-transition-property: -webkit-transform; -moz-transition-property: -moz-transform; -o-transition-property: -o-transform; transition-property: transform; }
+
+
 .badge-btn:hover, .badge-btn:focus { -webkit-transform: rotate(360deg); -moz-transform: rotate(360deg); -o-transform: rotate(360deg); }
 .footer-credit { font-size: 12px; text-transform: uppercase; letter-spacing: 5px; }
 footer a { color: #42817e; transition: all 0.5s ease; -moz-transition: all 0.5s ease; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; }
