--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,34 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> "Stekweb - A Sexy webdesign bureau" </title>
-  <meta name="description" content="Website design bureau">
-  <meta name="keywords" content="Website bouwen, ontwerp, lancering">
-  <meta name="author" content="Wouter Kompier">
-  
-  <!-- Bootstrap -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/flexslider.css" type="text/css">
-  <link href="css/styles.css?v=1.6" rel="stylesheet">
-  <link href="css/queries.css?v=1.6" rel="stylesheet">
-  <link href="css/jquery.fancybox.css" rel="stylesheet">
-  <!-- Fonts -->
-  <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
-  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-      <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-
-      <![endif]-->
-      <link rel="icon" href="img/favi.png" type="image/x-icon"/>
-      <link rel="shortcut icon" href="img/favi.png" type="image/x-icon"/>
-    </head>
-    <body>
       <section class="navigation">
         <div class="container-fluid">
           <div class="row">
@@ -144,56 +113,56 @@
                     <div class="flat-box">
                       <div class="colourway colour1"></div>
                       <a href="http://www.track-it.co/" target="_blank" class="title">Track-it</a>
-                      <p class="feature-text">Musical platform</p>
+                      <p class="feature-text">Musical platform.</p>
                     </div>
                   </div>
                   <div class="col-md-6">
                     <div class="flat-box">
                       <div class="colourway colour2"></div>
                       <a href="http://waata.github.io/Drone1/" target="_blank" class="title">Drone1</a>
-                      <p class="feature-text">Extra nice UI comes with the app</p>
+                      <p class="feature-text">Page for drone cameraman.</p>
                     </div>
                   </div>
                 </li>
                 <li>
                   <div class="design-content">
-                    <h1>Een selectie</h1>
-                    <p>Van de afgeleverde projecten. </p>
+                    <h1>De beste sites uit onze webstek.</h1>
+                    <p>gemaakt met liefde bij stekweb.</p>
                   </div>
                   <div class="col-md-6">
                     <div class="flat-box">
                       <div class="colourway colour3"></div>
                       <a href="http://www.festivaloverlast.nl" target="_blank" class="title">Festivaloverlast.nl</a>
-                      <p class="feature-text">Added Feature</p>
+                      <p class="feature-text">Page for the nuisance of festivals.</p>
                     </div>
                   </div>
                   <div class="col-md-6">
                     <div class="flat-box">
                       <div class="colourway colour4"></div>
                       <a href="http://www.coffeeopdehoek.nl" target="_blank" class="title">OpDeHoek Restaurant</a>
-                      <p class="feature-text">Extra nice UI comes with the app</p>
+                      <p class="feature-text">Page for a Stone-oven pizza restaurant.</p>
                     </div>
                   </div>
                 </li>
                 <li>
                   <div class="design-content">
-                    <h1>Zoals u wilt.</h1>
-                    <p>Geeft het beste idee. </p>
+                    <h1>De beste sites uit onze webstek.</h1>
+                    <p>gemaakt met liefde bij stekweb.</p>
                   </div>
                   <div class="col-md-6">
                     <div class="flat-box">
                       <div class="colourway colour5"></div>
                       <a href="http://waata.github.io/mediaholic-com-landing/" target="_blank" class="title">Mediaholic.com</a>
-                      <p class="feature-text">Added </p>
+                      <p class="feature-text">Page for mediaholi.nl.</p>
                     </div>
                   </div>
-<!--                     <div class="col-md-4">
+                    <div class="col-md-6">
                       <div class="flat-box">
                         <div class="colourway colour6"></div>
-                        <a href="http://www.track-it.co/" class="title">Track-it</a>
-                        <p class="feature-text">Extra nice UI comes with the app</p>
+                        <a href="http://api-design.netlify.com/" class="title">API-design</a>
+                        <p class="feature-text">Portfolio for an awesome designer.!</p>
                       </div>
-                    </div> -->
+                    </div>
                   </li>
                 </ul>
               </div>
@@ -214,16 +183,6 @@
             <div class="col-md-3">
               <p>The techniques we use are to the highest standards, we build our sites with some pure HTML5 CSS Javascript and sometimes even some Ruby magic sprinkled over it.</p>
             </div>
-<!--             <div class="col-md-2 col-md-offset-3">
-              <ul class="footer-nav">
-                <li><a href="#">Get Started Tutorial</a></li>
-                <li><a href="#">Introduction Video</a></li>
-                <li><a href="#">See the Features</a></li>
-                <li><a href="#">Download a Trial</a></li>
-                <li><a href="#">Get in Touch!</a></li>
-              </ul>
-            </div>
-          </div> -->
           <div class="row">
             <div class="col-md-12 text-center">
               <a href="#" class="badge-btn">Badge Button</a>
@@ -237,11 +196,11 @@
           <div class="modal-content">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-              <h4 class="modal-title" id="myModalLabel">Waar wacht je nog op,  </h4>
+              <h4 class="modal-title" id="myModalLabel">Waar wacht je nog op, Mail Ons!  </h4>
             </div>
             <div class="modal-body">
-              <a href="mailto:info@stekweb.nl?subject=Contact&body=Hi, ik zou graag meer informatie willen over uw diensten verstuurd vanaf:http://www.stekweb.nl" class="mail-btn-modal">Mail Ons!</a>
-              <a class="badge-logo-modal"></a>
+              <a href="mailto:info@stekweb.nl?subject=Contact&body=Hi, ik zou graag meer informatie willen over uw diensten verstuurd vanaf:http://www.stekweb.nl" class="mail-btn-modal badge-logo-modal"></a>
+             
               <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Sluit deze Spam</button>
                 <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
@@ -252,13 +211,11 @@
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <script src="js/jquery.fancybox.pack.js"></script>
+        <script src="javascripts/jquery.fancybox.pack.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/scripts.js?v=1.7"></script>
-        <script src="js/jquery.flexslider.js"></script>
-        <script src="js/jquery.smooth-scroll.js"></script>
-        <script src="js/modernizr.js"></script>
-        <script src="js/waypoints.min.js"></script>
-      </body>
-      </html>
+        <script src="javascripts/bootstrap.min.js"></script>
+        <script src="javascripts/scripts.js?v=1.7"></script>
+        <script src="javascripts/jquery.flexslider.js"></script>
+        <script src="javascripts/jquery.smooth-scroll.js"></script>
+        <script src="javascripts/modernizr.js"></script>
+        <script src="javascripts/waypoints.min.js"></script>
