--- a/source/stylesheets/styles.css
+++ b/source/stylesheets/styles.css
@@ -26,6 +26,7 @@ Base
 html { font-size: 100%; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
 -ms-text-size-adjust: 100%; /* 2 */ }
+
 /* * Addresses `font-family` inconsistency between `textarea` and other form
 * elements. */
 html, button, input, select, textarea { font-family: 'Lato', sans-serif; }
@@ -204,7 +205,7 @@ nav ul li a { color: rgba(255, 255, 255, 0.6); padding: 20px; display: block; bo
 nav ul li a:hover, nav ul li a:focus { color: rgba(255, 255, 255, 1); text-decoration: none; }
 .indicator { position: absolute; right: 0 !important; }
 .pull { display: none; }
-/* .hero { background: url('../img/hero.jpg') no-repeat center center; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; padding: 65px 0; height: auto; }
+/* .hero { background: url('../images/hero.jpg') no-repeat center center; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; padding: 65px 0; height: auto; }
  */
 
 
@@ -212,15 +213,18 @@ nav ul li a:hover, nav ul li a:focus { color: rgba(255, 255, 255, 1); text-decor
 .hero h1 { color: black ;}
 .hero p { color: black ; font-style: italic; font-size: 12px; margin-bottom: 20px; }
 .hero a { color: black; }
-.hero-play-btn { height: 99px; width: 99px; background: url('../img/play-btn.png') no-repeat center center; display: block; text-indent: -99999px; margin: 80px auto 260px; transition: all 1s ease; -moz-transition: all 1s ease; -webkit-transition: all 1s ease; -o-transition: all 1s ease; }
+.hero-play-btn { height: 99px; width: 99px; background: url('../images/play-btn.png') no-repeat center center; display: block; text-indent: -99999px; margin: 80px auto 260px; transition: all 1s ease; -moz-transition: all 1s ease; -webkit-transition: all 1s ease; -o-transition: all 1s ease; }
 .hero-play-btn:hover, .hero-play-btn:focus { transform: translate(0, -15px); -webkit-transform: translate(0, -15px); -o-transform: translate(0, -15px); -moz-transform: translate(0, -15px); }
 .get-started-btn { background-color: #7accc8; padding: 20px 80px; border-radius: 3px; -webkit-border-radius: 3px; -moz-border-radius: 3px; font-size: 22px; letter-spacing: 2px; box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.4); transition: all 0.5s ease; -moz-transition: all 0.5s ease; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; display: inline-block; }
 .get-started-btn:hover, .get-started-btn:focus { text-decoration: none; background-color: #e8b968; }
-.download-now { background: #e8b968 url('../img/ipadBG.png') no-repeat right 65px; background-size: 50%; }
+.download-now { background: #e8b968 url('../images/ipadBG.png') no-repeat right 65px; background-size: 50%; }
 .download-now p { color: #fff; font-size: 16px; margin: 40px 30px 40px 0; line-height: 30px; }
 .download-btn { border: solid 3px #fff; border-radius: 3px; -webkit-border-radius: 3px; -moz-border-radius: 3px; font-size: 17px; letter-spacing: 2px; transition: all 0.5s ease; padding: 15px 70px; display: inline-block; color: #fff; margin-top: 20px; }
-.mail-btn { border: solid 3px #fff; border-radius: 3px; -webkit-border-radius: 3px; -moz-border-radius: 3px; font-size: 17px; letter-spacing: 2px; transition: all 0.5s ease; padding: 15px 70px; display: inline-block; color: #fff; margin-bottom: 120px; margin-top: 20px; }
 
+.modal-content {
+    opacity: 0.9;
+}
+.mail-btn { border: solid 3px #fff; border-radius: 3px; -webkit-border-radius: 3px; -moz-border-radius: 3px; font-size: 17px; letter-spacing: 2px; transition: all 0.5s ease; padding: 15px 70px; display: inline-block; color: #fff; margin-bottom: 120px; margin-top: 20px; }
 .mail-btn-modal { border: solid 3px #fff; border-radius: 3px; -webkit-border-radius: 3px; -moz-border-radius: 3px; font-size: 30px; letter-spacing: 2px; transition: all 0.5s ease; display: inline-block; color: black; }
 .modal-footer {
     margin-top: 15px;
@@ -228,12 +232,12 @@ nav ul li a:hover, nav ul li a:focus { color: rgba(255, 255, 255, 1); text-decor
     text-align: right;
     border-top: 1px solid #e5e5e5;
 }
-.badge-logo-modal { opacity:0.6; height: 62px; background: url('../img/logo.png') no-repeat center center; text-indent: -99999px; display: block; margin: 5px auto 5px; -webkit-transition-duration: 3s; -moz-transition-duration: 3s; -o-transition-duration: 3s; transition-duration: 3s; -webkit-transition-property: -webkit-transform; -moz-transition-property: -moz-transform; -o-transition-property: -o-transform; transition-property: transform; }
+.badge-logo-modal { opacity:0.6; height: 75px; background: url('../images/logo.png') no-repeat center center; text-indent: -99999px; display: block; margin: 5px auto 5px; -webkit-transition-duration: 3s; -moz-transition-duration: 3s; -o-transition-duration: 3s; transition-duration: 3s; -webkit-transition-property: -webkit-transform; -moz-transition-property: -moz-transform; -o-transition-property: -o-transform; transition-property: transform; }
 
 
 .download-btn:hover, .download-btn:focus { text-decoration: none; border-color: #a58347; color: #a58347; }
-.testimonials { background: #5b6869 url('../img/tBG01.jpg') no-repeat left center; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; padding: 30px 0; }
-.features { background: #C1EAE8  url('../img/arrowBG.png') no-repeat center -1px; padding: 70px 0; position: relative ;}
+.testimonials { background: #5b6869 url('../images/tBG01.jpg') no-repeat left center; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; padding: 30px 0; }
+.features { background: #C1EAE8  url('../images/arrowBG.png') no-repeat center -1px; padding: 70px 0; position: relative ;}
 .features p { color: #7a8387; font-size: 16px; word-spacing: 2px; line-height: 30px; }
 .hoe {padding-bottom:20px; padding-top:20px;}
 .features-leftcol { border-right: 1px solid rgba(208, 217, 226, 0.4); padding-right: 60px; }
@@ -266,7 +270,10 @@ nav ul li a:hover, nav ul li a:focus { color: rgba(255, 255, 255, 1); text-decor
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;}
-.colour6 { background-color: #373b44; background-image: url("https://unsplash.it/1600/600/?600");}
+.colour6 { background-color: #373b44; background-image: url("http://res.cloudinary.com/waata/image/upload/v1465384652/Screen_Shot_2016-06-08_at_13.14.28_h2399q.png");  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;}
 .title { font-size: 15px; color: #9197a8; text-transform: uppercase; font-weight: 600; letter-spacing: 2px; padding: 20px 40px 0; }
 .feature-text { padding: 0px 20px 40px 40px; font-style: italic; color: #7a8387; font-size: 16px; }
 .design-content p { color: #abbcc3; line-height: 30px; font-weight: 300; }
@@ -278,8 +285,8 @@ footer p { color: #fff; line-height: 30px; }
 .footer-nav { list-style: none; padding: 0; }
 .footer-nav li a { display: block; color: #fff; padding: 5px; transition: all 0.5s ease; -moz-transition: all 0.5s ease; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; }
 .footer-nav li a:hover, .footer-nav li a:focus { text-decoration: none; color: #5db3af; }
-.badge-btn { width: 60px; height: 62px; background: url('../img/footer-logo.png') no-repeat center center; text-indent: -99999px; display: block; margin: 65px auto 65px; -webkit-transition-duration: 3s; -moz-transition-duration: 3s; -o-transition-duration: 3s; transition-duration: 3s; -webkit-transition-property: -webkit-transform; -moz-transition-property: -moz-transform; -o-transition-property: -o-transform; transition-property: transform; }
-.badge-logo { opacity:0.6; height: 62px; background: url('../img/logo.png') no-repeat center center; text-indent: -99999px; display: block; margin: 65px auto 65px; -webkit-transition-duration: 3s; -moz-transition-duration: 3s; -o-transition-duration: 3s; transition-duration: 3s; -webkit-transition-property: -webkit-transform; -moz-transition-property: -moz-transform; -o-transition-property: -o-transform; transition-property: transform; }
+.badge-btn { width: 60px; height: 62px; background: url('../images/footer-logo.png') no-repeat center center; text-indent: -99999px; display: block; margin: 65px auto 65px; -webkit-transition-duration: 3s; -moz-transition-duration: 3s; -o-transition-duration: 3s; transition-duration: 3s; -webkit-transition-property: -webkit-transform; -moz-transition-property: -moz-transform; -o-transition-property: -o-transform; transition-property: transform; }
+.badge-logo { opacity:0.6; height: 62px; background: url('../images/logo.png') no-repeat center center; text-indent: -99999px; display: block; margin: 65px auto 65px; -webkit-transition-duration: 3s; -moz-transition-duration: 3s; -o-transition-duration: 3s; transition-duration: 3s; -webkit-transition-property: -webkit-transform; -moz-transition-property: -moz-transform; -o-transition-property: -o-transform; transition-property: transform; }
 
 
 .badge-btn:hover, .badge-btn:focus { -webkit-transform: rotate(360deg); -moz-transform: rotate(360deg); -o-transform: rotate(360deg); }
